Update issue 35 Status: Fixed - Added links to error page. - Adjusted styling so stacktraces are more readable.

--- a/trunk/web/src/main/webapp/css/classic/messages.css
+++ b/trunk/web/src/main/webapp/css/classic/messages.css
@@ -41,6 +41,7 @@ div.errorMessageDetails {
     font-weight: bold;
     background-color: #FFB6C1;
     border: 1px dashed #666;
+    white-space: pre-wrap;
 }
 
 div.codesample {
